--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
         <java.version>1.8</java.version>
 
         <hutool.version>5.4.2</hutool.version>
-        <fastjson.version>1.2.73</fastjson.version>
+        <fastjson.version>1.2.69</fastjson.version>
         <mybatis-plus.version>3.4.0</mybatis-plus.version>
         <easyexcel.version>2.2.6</easyexcel.version>
         <userAgentUtils.version>1.21</userAgentUtils.version>
         <lombok.version>1.18.8</lombok.version>
-
-
+        <jjwt.version>0.11.2</jjwt.version>
+        <captcha.version>1.6.2</captcha.version>
     </properties>
 
     <dependencies>
@@ -42,6 +42,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter</artifactId>
+                </exclusion>
+                <!--改用fastJson序列化-->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-json</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -108,6 +123,12 @@
                     <artifactId>lettuce-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
