--- a/pudge-system/src/main/resources/application.yml
+++ b/pudge-system/src/main/resources/application.yml
@@ -7,8 +7,8 @@ mybatis-plus:
   global-config:
     # 数据库相关配置
     db-config:
-      #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
-      id-type: id_worker
+      #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID",ASSIGN_ID:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
+      id-type: ASSIGN_ID
       #逻辑删除配置
       logic-delete-value: 0
       logic-not-delete-value: 1
@@ -17,7 +17,7 @@ mybatis-plus:
   #枚举类 扫描路径，如果配置了该属性，会将路径下的枚举类进行注入，让实体类字段能够简单快捷的使用枚举属性
   type-enums-package: pers.yurwisher.dota2.pudge.enums
   #别名包扫描路径 注册后在 Mapper 对应的 XML 文件中可以直接使用类名，而不用使用全限定的类名
-  type-aliases-package: pers.yurwisher.pudge.*.entity
+  type-aliases-package: pers.yurwisher.dota2.pudge.*.entity
   # 原生配置
   configuration:
     #自动驼峰命名规则
