--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <lombok.version>1.18.8</lombok.version>
         <jjwt.version>0.11.2</jjwt.version>
         <captcha.version>1.6.2</captcha.version>
+        <ip2region.version>1.7.2</ip2region.version>
     </properties>
 
     <dependencies>
