--- a/pudge-system/src/main/resources/application.yml
+++ b/pudge-system/src/main/resources/application.yml
@@ -23,6 +23,7 @@ mybatis-plus:
     #自动驼峰命名规则
     map-underscore-to-camel-case: true
     cache-enabled: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
 server:
   port: 8111
 
