--- a/pudge-system/pom.xml
+++ b/pudge-system/pom.xml
@@ -48,6 +48,12 @@
             <version>0.0.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!--模板引擎-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
