--- a/pudge-system/src/main/resources/application-dev.yml
+++ b/pudge-system/src/main/resources/application-dev.yml
@@ -1,8 +1,13 @@
+server:
+  port: 8111
+  tomcat:
+    #tomcat临时文件缓存目录
+    basedir: D:\tomcatTemp
 #spring
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/dota2-pudge?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/dota2_pudge?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -46,11 +51,6 @@ spring:
         queue-capacity: 128
         #线程池中corePoolSize线程空闲时间达到keepAliveTime也将关闭
         allow-core-thread-timeout: true
-server:
-  port: 8111
-  tomcat:
-    #tomcat临时文件缓存目录
-    basedir: D:\tomcatTemp
 #jwt配置
 jwt:
   token:
