--- a/pudge-system/src/main/resources/application-dev.yml
+++ b/pudge-system/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
     host: localhost
     password: 123456
     port: 6379
-    jedis:
+    lettuce:
       pool:
         # 连接池最大连接数（使用负值表示没有限制）
         max-active: 10
@@ -24,6 +24,8 @@ spring:
         min-idle: 0
         # 连接池中的最大空闲连接
         max-idle: 8
+        #最长等待
+        max-wait: 10s
     database: 13
     timeout: 5s
   servlet:
