--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <jjwt.version>0.11.2</jjwt.version>
         <captcha.version>1.6.2</captcha.version>
         <ip2region.version>1.7.2</ip2region.version>
+        <easyexcel.version>2.2.7</easyexcel.version>
     </properties>
 
     <dependencies>
